# FastAPIBlog

./: .gitignore  auth.py  check_s3.py  config.py  database.py  email_utils.py  image_utils.py  main.py  models.py  populate_db.py  pyproject.toml  schemas.py
alembic/versions/: 03342fdaba0b_initial_schema.py  755ebc68ceb9_add_likes_to_posts.py
routers/: posts.py  users.py
templates/: account.html  forgot_password.html  home.html  layout.html  login.html  post.html  register.html  reset_password.html  user_posts.html
templates/email/: password_reset.html
tests/: conftest.py  test_posts.py  test_users.py
